update spec
