# openapi/gen.types.go
@@ -3,11 +3,11 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
 package openapi
 
-// Defines values for TaskOnDuplication.
+// Defines values for TaskOnDuplicate.
 const (
-	TaskOnDuplicationError TaskOnDuplication = "error"
+	TaskOnDuplicateError TaskOnDuplicate = "error"
 
-	TaskOnDuplicationOverwrite TaskOnDuplication = "overwrite"
+	TaskOnDuplicateOverwrite TaskOnDuplicate = "overwrite"
 )
 
 // Defines values for TaskShardMode.
@@ -250,11 +250,11 @@ type SyncStatus struct {
 
 // task
 type Task struct {
+	// binlog filter rule set
+	BinlogFilterRule *[]TaskBinLogFilterRule `json:"binlog_filter_rule,omitempty"`
+
 	// whether to enable support for the online ddl plugin
 	EnhanceOnlineSchemaChange bool `json:"enhance_online_schema_change"`
-
-	// binlog event filter rule set
-	EventFilterRule *[]TaskEventFilterRule `json:"event_filter_rule,omitempty"`
 
 	// downstream database for storing meta information
 	MetaSchema *string `json:"meta_schema,omitempty"`
@@ -263,7 +263,7 @@ type Task struct {
 	Name string `json:"name"`
 
 	// how to handle conflicted data
-	OnDuplication TaskOnDuplication `json:"on_duplication"`
+	OnDuplicate TaskOnDuplicate `json:"on_duplicate"`
 
 	// the way to coordinate DDL
 	ShardMode *TaskShardMode `json:"shard_mode,omitempty"`
@@ -282,7 +282,7 @@ type Task struct {
 }
 
 // how to handle conflicted data
-type TaskOnDuplication string
+type TaskOnDuplicate string
 
 // the way to coordinate DDL
 type TaskShardMode string
@@ -291,7 +291,7 @@ type TaskShardMode string
 type TaskTaskMode string
 
 // Filtering rules at binlog level
-type TaskEventFilterRule struct {
+type TaskBinLogFilterRule struct {
 	// event type
 	IgnoreEvent *[]string `json:"ignore_event,omitempty"`
 
